@@ -2,14 +2,12 @@
 #-*-perl-*-
 #-*- Mode: perl; tab-width: 2; indent-tabs-mode: f; c-basic-offset: 2 -*-
 
-# Common stuff for the ximian-setup-tools backends.
+# parse.pl: Common parsing stuff for the ximian-setup-tools backends.
 #
 # Copyright (C) 2000-2001 Ximian, Inc.
 #
 # Authors: Hans Petter Jansson <hpj@ximian.com>
 #          Arturo Espinosa <arturo@ximian.com>
-#          Michael Vogt <mvo@debian.org> - Debian 2.[2|3] support.
-#          David Lee Ludwig <davidl@wpi.edu> - Debian 2.[2|3] support.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU Library General Public License as published
@@ -60,7 +58,7 @@ sub xst_parse_split
   my ($file, $key, $re, $all) = @_;
   my ($fd, @line, @res);
 
-  $fd = be_open_read_from_names ($file);
+  $fd = &be_open_read_from_names ($file);
   $all = 0 if !$fd;
   
   while (<$fd>)
@@ -205,7 +203,7 @@ sub xst_parse_split_hash
   my ($file, $key_re, $value_re) = @_;
   my ($fd, @line, %res, $key);
 
-  $fd = be_open_read_from_names ($file);
+  $fd = &be_open_read_from_names ($file);
   
   while (<$fd>)
   {
@@ -261,7 +259,7 @@ sub xst_parse_ini
   my ($fd, $res);
   my $found_section_flag = 0;
 
-  $fd = be_open_read_from_names ($file);
+  $fd = &be_open_read_from_names ($file);
   $res = undef;
   
   while (($_ = &xst_parse_ini_line_read ($fd)) != -1)
